popup where we find better product

--- a/extensions/popup.html
+++ b/extensions/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+<script src="./popup.js"></script>
     <body>
-        <h1>We find that product in other website</h1>
-        <a href="url">link text</a>
+        <h1 id="title">We find that product in other website</h1>
+        <a id="link" href="url">Link</a>
     </body>
 </html>
