moving the check to see if the product in the list to be in the extension side and checking with 2 products

--- a/extensions/popup.html
+++ b/extensions/popup.html
@@ -2,6 +2,6 @@
 <script src="./popup.js"></script>
     <body>
         <h1 id="title">We find that product in other website</h1>
-        <a id="link" href="url">Link</a>
+        <a id="link" href="" >Link</a>
     </body>
 </html>
