adding ebay api and promises

--- a/extensions/popup.html
+++ b/extensions/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <script src="./popup.js"></script>
     <body>
-        <h1 id="title">We find that product in other website</h1>
+        <h1 id="title"></h1>
         <a id="link" href="" >Link</a>
     </body>
 </html>
